fix broken dark mode

--- a/styles/Grid.module.css
+++ b/styles/Grid.module.css
@@ -16,12 +16,4 @@
 .borderedTable th {
   padding-top: 12px;
   padding-bottom: 12px;
-  background-color: #f2f2f2;
-  color: black;
 }
-
-.table-hoverable tr:hover {
-  background-color: #f5f5f5;
-}
-
-
